Fixed color contrast at About page #26

--- a/themes/loconomics/assets/css/pages/_about.scss
+++ b/themes/loconomics/assets/css/pages/_about.scss
@@ -46,7 +46,7 @@
     }
 
     #about-team {
-        $content-color: #959595;
+        $content-color: #6d6d6d;
         $img-color: #d3d3d3;
 
         h2 {
